--- a/about.html
+++ b/about.html
@@ -91,78 +91,83 @@
         >
       </li>
     </ul> -->
-    <section class="join-us">
-      <div class="join-info">
-        <h1 class="join-title">about us</h1>
-        <div class="line"></div>
-      </div>
-      <div class="jon">
-        <p class="join-text">
-          The Single Mother Sanctuary is a dedicated social support group aimed
-          at empowering and uplifting single mothers by providing emotional,
-          practical, and community-based support. This sanctuary exists to
-          create a safe space where women raising children on their own can find
-          relief, encouragement, and resources to thrive personally,
-          emotionally, and economically. Whether a mother is newly single,
-          long-time solo, or facing challenges such as housing instability,
-          financial hardship, emotional stress, or social isolation, the group
-          offers non-judgmental support and a strong sense of belonging. Single
-          mothers face unique challenges that can affect their wellbeing and
-          their children's future. Single Mother Sanctuary stands as a reminder
-          that they are not alone—that with the right support, healing and hope
-          are possible. By fostering connection, sharing resources, and building
-          confidence, the group aims to break cycles of poverty, isolation, and
-          stress.
-        </p>
-      </div>
-      <a
-        href="index.html"
-        class="impact-link"
-        ><i class="fa-solid fa-circle-arrow-left imp"></i>
-        <i class="fa-solid fa-ellipsis imp"></i>
-      </a>
-      <h4 class="impact-back">back</h4>
-    </section>
-
-    <footer class="footer">
-      <div class="divider"></div>
-      <article class="footer-center clearfix">
-        <div class="footer-icon">
-          <a
-            href="facebook.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-facebook"></i>
-          </a>
-          <a
-            href="twitter.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a
-            href="whatsapp.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-tiktok"></i>
-          </a>
-          <a
-            href="whatsapp.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-twitter"></i>
-          </a>
+    <section
+      class="mainContent"
+      id="mainContent"
+    >
+      <section class="join-us">
+        <div class="join-info">
+          <h1 class="join-title">about us</h1>
+          <div class="line"></div>
         </div>
+        <div class="jon">
+          <p class="join-text">
+            The Single Mother Sanctuary is a dedicated social support group
+            aimed at empowering and uplifting single mothers by providing
+            emotional, practical, and community-based support. This sanctuary
+            exists to create a safe space where women raising children on their
+            own can find relief, encouragement, and resources to thrive
+            personally, emotionally, and economically. Whether a mother is newly
+            single, long-time solo, or facing challenges such as housing
+            instability, financial hardship, emotional stress, or social
+            isolation, the group offers non-judgmental support and a strong
+            sense of belonging. Single mothers face unique challenges that can
+            affect their wellbeing and their children's future. Single Mother
+            Sanctuary stands as a reminder that they are not alone—that with the
+            right support, healing and hope are possible. By fostering
+            connection, sharing resources, and building confidence, the group
+            aims to break cycles of poverty, isolation, and stress.
+          </p>
+        </div>
+        <a
+          href="index.html"
+          class="impact-link"
+          ><i class="fa-solid fa-circle-arrow-left imp"></i>
+          <i class="fa-solid fa-ellipsis imp"></i>
+        </a>
+        <h4 class="impact-back">back</h4>
+      </section>
 
-        <h4 class="footer-sta">
-          &copy;<span>2025</span>
-          <span class="foot-special">
-            <span class="footer-colo">reliable</span>
-            all right reserved
-          </span>
-        </h4>
-      </article>
-    </footer>
+      <footer class="footer">
+        <div class="divider"></div>
+        <article class="footer-center clearfix">
+          <div class="footer-icon">
+            <a
+              href="facebook.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a
+              href="twitter.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a
+              href="whatsapp.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-tiktok"></i>
+            </a>
+            <a
+              href="whatsapp.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+
+          <h4 class="footer-sta">
+            &copy;<span>2025</span>
+            <span class="foot-special">
+              <span class="footer-colo">reliable</span>
+              all right reserved
+            </span>
+          </h4>
+        </article>
+      </footer>
+    </section>
 
     <script src="app.js"></script>
   </body>
