--- a/contact.html
+++ b/contact.html
@@ -79,120 +79,124 @@
         </li>
       </ul>
     </nav>
+    <section
+      class="mainContent"
+      id="mainContent"
+    >
+      <section class="join-us">
+        <div class="join-info">
+          <h1 class="join-title">contact us</h1>
+          <div class="line"></div>
+        </div>
 
-    <section class="join-us">
-      <div class="join-info">
-        <h1 class="join-title">contact us</h1>
-        <div class="line"></div>
-      </div>
-
-      <!-- contact section -->
-      <section class="contact">
-        <div class="section-center clearfix">
-          <article class="contact-info">
-            <div class="contact-item">
-              <h4 class="contact-title">
-                <span class="contact-icon">
-                  <i class="fas fa-location-arrow"></i>
-                </span>
-                address
-              </h4>
-              <h4 class="contact-text">
-                2/1 145, halley place <br />
-                glasgow, scotland G135gh
-              </h4>
-            </div>
-            <div class="contact-item">
-              <h4 class="contact-title">
-                <span class="contact-icon">
-                  <i class="fas fa-envelope"></i>
-                </span>
-                email
-              </h4>
-              <h4 class="contact-text">email@email.com</h4>
-            </div>
-            <div class="contact-item">
-              <h4 class="contact-title">
-                <span class="contact-icon">
-                  <i class="fas fa-phone"></i>
-                </span>
-                telephone
-              </h4>
-              <h4 class="contact-text">44362867448473</h4>
-            </div>
-            <!-- \end of contact item -->
-          </article>
-          <article class="contact-form">
-            <form>
-              <div class="form-group">
-                <input
-                  type="name"
-                  placeholder="name"
-                  class="form-control"
-                />
-                <input
-                  type="email"
-                  placeholder="email"
-                  class="form-control"
-                />
-                <textarea
-                  name="message"
-                  class="form-control"
-                  rows="6"
-                  placeholder="message"
-                ></textarea>
+        <!-- contact section -->
+        <section class="contact">
+          <div class="section-center clearfix">
+            <article class="contact-info">
+              <div class="contact-item">
+                <h4 class="contact-title">
+                  <span class="contact-icon">
+                    <i class="fas fa-location-arrow"></i>
+                  </span>
+                  address
+                </h4>
+                <h4 class="contact-text">
+                  2/1 145, halley place <br />
+                  glasgow, scotland G135gh
+                </h4>
               </div>
-              <button
-                type="submit"
-                class="submit-btn btn"
-              >
-                submit here
-              </button>
-            </form>
-          </article>
-        </div>
+              <div class="contact-item">
+                <h4 class="contact-title">
+                  <span class="contact-icon">
+                    <i class="fas fa-envelope"></i>
+                  </span>
+                  email
+                </h4>
+                <h4 class="contact-text">email@email.com</h4>
+              </div>
+              <div class="contact-item">
+                <h4 class="contact-title">
+                  <span class="contact-icon">
+                    <i class="fas fa-phone"></i>
+                  </span>
+                  telephone
+                </h4>
+                <h4 class="contact-text">44362867448473</h4>
+              </div>
+              <!-- \end of contact item -->
+            </article>
+            <article class="contact-form">
+              <form>
+                <div class="form-group">
+                  <input
+                    type="name"
+                    placeholder="name"
+                    class="form-control"
+                  />
+                  <input
+                    type="email"
+                    placeholder="email"
+                    class="form-control"
+                  />
+                  <textarea
+                    name="message"
+                    class="form-control"
+                    rows="6"
+                    placeholder="message"
+                  ></textarea>
+                </div>
+                <button
+                  type="submit"
+                  class="submit-btn btn"
+                >
+                  submit here
+                </button>
+              </form>
+            </article>
+          </div>
+        </section>
       </section>
+
+      <footer class="footer">
+        <div class="divider"></div>
+        <article class="footer-center clearfix">
+          <div class="footer-icon">
+            <a
+              href="facebook.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a
+              href="twitter.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a
+              href="whatsapp.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-tiktok"></i>
+            </a>
+            <a
+              href="whatsapp.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+
+          <h4 class="footer-sta">
+            &copy;<span>2025</span>
+            <span class="foot-special">
+              <span class="footer-colo">reliable</span>
+              all right reserved
+            </span>
+          </h4>
+        </article>
+      </footer>
     </section>
-
-    <footer class="footer">
-      <div class="divider"></div>
-      <article class="footer-center clearfix">
-        <div class="footer-icon">
-          <a
-            href="facebook.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-facebook"></i>
-          </a>
-          <a
-            href="twitter.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a
-            href="whatsapp.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-tiktok"></i>
-          </a>
-          <a
-            href="whatsapp.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-twitter"></i>
-          </a>
-        </div>
-
-        <h4 class="footer-sta">
-          &copy;<span>2025</span>
-          <span class="foot-special">
-            <span class="footer-colo">reliable</span>
-            all right reserved
-          </span>
-        </h4>
-      </article>
-    </footer>
 
     <script src="app.js"></script>
   </body>
