--- a/explore.html
+++ b/explore.html
@@ -24,145 +24,152 @@
     />
   </head>
   <body>
-    <section class="impact">
-      <div class="section-center clearfix">
-        <div class="section-title">
-          <h3 class="impact-tit">
-            The Rise of Single Women and Their Impact on Society
-          </h3>
+    <section
+      class="mainContent"
+      id="mainContent"
+    >
+      <section class="impact">
+        <div class="section-center clearfix">
+          <div class="section-title">
+            <h3 class="impact-tit">
+              The Rise of Single Women and Their Impact on Society
+            </h3>
+          </div>
+          <p class="impact-txt">
+            In recent decades, a quiet revolution has been reshaping societies
+            around the globe: the rise of single women. As more women choose to
+            remain unmarried or delay marriage, they are transforming economies,
+            politics, cultural norms, and family structures. Far from being a
+            marginal demographic, single women are becoming one of the most
+            influential groups in many parts of the world
+          </p>
+          <div class="section-title">
+            <h3 class="impact-title">1. Economic Empowerment</h3>
+          </div>
+          <p class="impact-text">
+            Single women are increasingly driving economic growth. With greater
+            access to education and careers, they are earning more, spending
+            more, and investing more independently than ever before. According
+            to various economic studies, single women tend to spend a higher
+            proportion of their income on housing, education, and health — areas
+            that stimulate long-term economic development. Women who are not
+            tied to traditional family roles often have more disposable income
+            and greater financial independence. This shift is influencing
+            industries from real estate to travel, fashion to finance. Cities
+            are beginning to recognize this trend, with urban developers
+            designing spaces that cater specifically to the needs of independent
+            women.
+          </p>
+          <div class="section-title">
+            <h3 class="impact-title">2. Political and Social Influence</h3>
+          </div>
+          <p class="impact-text">
+            Single women represent a powerful voting bloc. Their concerns —
+            often centered around healthcare, reproductive rights, education,
+            gender equality, and workplace equity — are shaping policy platforms
+            and influencing election outcomes. Politicians who ignore this
+            demographic risk alienating a large and vocal segment of the
+            electorate. Socially, single women are also challenging outdated
+            stereotypes. They are redefining femininity, success, and
+            fulfillment, no longer tethered to the traditional milestones of
+            marriage and motherhood. This is fostering a broader cultural
+            acceptance of diverse lifestyles, relationships, and identities.
+          </p>
+          <div class="section-title">
+            <h3 class="impact-title">3. Changing Family Dynamics</h3>
+          </div>
+          <p class="impact-text">
+            As marriage becomes less of a societal mandate, single women are
+            exploring alternative ways to build families. Some are choosing
+            single motherhood by choice, while others are investing in their
+            extended families or communities. This is diversifying the concept
+            of what a family looks like and promoting models of care that extend
+            beyond the nuclear household. Moreover, with more women delaying or
+            forgoing marriage, caregiving roles are being redefined. Many single
+            women are also stepping into leadership roles within their families
+            and communities, offering support across generations.
+          </p>
+          <div class="section-title">
+            <h3 class="impact-title">4. Cultural Shifts and Representation</h3>
+          </div>
+          <p class="impact-text">
+            Media and literature are slowly beginning to reflect the realities
+            of single women as complex, autonomous individuals. Characters once
+            relegated to the role of the "spinster" or "sidekick" are now
+            portrayed as protagonists leading rich, meaningful lives. This
+            visibility matters — it challenges long-held stigmas and allows
+            young girls to see a broader range of futures for themselves. At the
+            same time, the normalization of singlehood is challenging
+            patriarchal norms that have long equated a woman's worth with her
+            marital status. As single women gain visibility, they are also
+            gaining cultural power, shaping narratives around independence,
+            freedom, and choice.
+          </p>
+          <div class="section-title">
+            <h3 class="impact-title">5. Global Perspective</h3>
+          </div>
+          <p class="impact-text">
+            The impact of single women varies across cultures, but the trend is
+            global. In countries like Japan, Germany, and South Korea, declining
+            marriage and birth rates are prompting governments to reconsider
+            social welfare systems, work-life balance policies, and gender
+            norms. In the United States and parts of Europe, single women are
+            some of the most educated and professionally active demographics.
+            Even in traditionally conservative societies, change is occurring.
+            As women gain access to education and technology, they are asserting
+            their right to choose — whether that’s the choice to marry, to have
+            children, or to pursue a career on their own terms.
+          </p>
+          <a
+            href="index.html"
+            class="impact-link"
+            ><i class="fa-solid fa-circle-arrow-left imp"></i>
+            <i class="fa-solid fa-ellipsis imp"></i>
+          </a>
+          <h4 class="impact-back">back</h4>
         </div>
-        <p class="impact-txt">
-          In recent decades, a quiet revolution has been reshaping societies
-          around the globe: the rise of single women. As more women choose to
-          remain unmarried or delay marriage, they are transforming economies,
-          politics, cultural norms, and family structures. Far from being a
-          marginal demographic, single women are becoming one of the most
-          influential groups in many parts of the world
-        </p>
-        <div class="section-title">
-          <h3 class="impact-title">1. Economic Empowerment</h3>
-        </div>
-        <p class="impact-text">
-          Single women are increasingly driving economic growth. With greater
-          access to education and careers, they are earning more, spending more,
-          and investing more independently than ever before. According to
-          various economic studies, single women tend to spend a higher
-          proportion of their income on housing, education, and health — areas
-          that stimulate long-term economic development. Women who are not tied
-          to traditional family roles often have more disposable income and
-          greater financial independence. This shift is influencing industries
-          from real estate to travel, fashion to finance. Cities are beginning
-          to recognize this trend, with urban developers designing spaces that
-          cater specifically to the needs of independent women.
-        </p>
-        <div class="section-title">
-          <h3 class="impact-title">2. Political and Social Influence</h3>
-        </div>
-        <p class="impact-text">
-          Single women represent a powerful voting bloc. Their concerns — often
-          centered around healthcare, reproductive rights, education, gender
-          equality, and workplace equity — are shaping policy platforms and
-          influencing election outcomes. Politicians who ignore this demographic
-          risk alienating a large and vocal segment of the electorate. Socially,
-          single women are also challenging outdated stereotypes. They are
-          redefining femininity, success, and fulfillment, no longer tethered to
-          the traditional milestones of marriage and motherhood. This is
-          fostering a broader cultural acceptance of diverse lifestyles,
-          relationships, and identities.
-        </p>
-        <div class="section-title">
-          <h3 class="impact-title">3. Changing Family Dynamics</h3>
-        </div>
-        <p class="impact-text">
-          As marriage becomes less of a societal mandate, single women are
-          exploring alternative ways to build families. Some are choosing single
-          motherhood by choice, while others are investing in their extended
-          families or communities. This is diversifying the concept of what a
-          family looks like and promoting models of care that extend beyond the
-          nuclear household. Moreover, with more women delaying or forgoing
-          marriage, caregiving roles are being redefined. Many single women are
-          also stepping into leadership roles within their families and
-          communities, offering support across generations.
-        </p>
-        <div class="section-title">
-          <h3 class="impact-title">4. Cultural Shifts and Representation</h3>
-        </div>
-        <p class="impact-text">
-          Media and literature are slowly beginning to reflect the realities of
-          single women as complex, autonomous individuals. Characters once
-          relegated to the role of the "spinster" or "sidekick" are now
-          portrayed as protagonists leading rich, meaningful lives. This
-          visibility matters — it challenges long-held stigmas and allows young
-          girls to see a broader range of futures for themselves. At the same
-          time, the normalization of singlehood is challenging patriarchal norms
-          that have long equated a woman's worth with her marital status. As
-          single women gain visibility, they are also gaining cultural power,
-          shaping narratives around independence, freedom, and choice.
-        </p>
-        <div class="section-title">
-          <h3 class="impact-title">5. Global Perspective</h3>
-        </div>
-        <p class="impact-text">
-          The impact of single women varies across cultures, but the trend is
-          global. In countries like Japan, Germany, and South Korea, declining
-          marriage and birth rates are prompting governments to reconsider
-          social welfare systems, work-life balance policies, and gender norms.
-          In the United States and parts of Europe, single women are some of the
-          most educated and professionally active demographics. Even in
-          traditionally conservative societies, change is occurring. As women
-          gain access to education and technology, they are asserting their
-          right to choose — whether that’s the choice to marry, to have
-          children, or to pursue a career on their own terms.
-        </p>
-        <a
-          href="index.html"
-          class="impact-link"
-          ><i class="fa-solid fa-circle-arrow-left imp"></i>
-          <i class="fa-solid fa-ellipsis imp"></i>
-        </a>
-        <h4 class="impact-back">back</h4>
-      </div>
+      </section>
+
+      <footer class="footer">
+        <div class="divider"></div>
+        <article class="footer-center clearfix">
+          <div class="footer-icon">
+            <a
+              href="facebook.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a
+              href="twitter.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a
+              href="whatsapp.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-tiktok"></i>
+            </a>
+            <a
+              href="whatsapp.com"
+              class="mother-icon"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+          </div>
+
+          <h4 class="footer-sta">
+            &copy;<span>2025</span>
+            <span class="foot-special">
+              <span class="footer-colo">reliable</span>
+              all right reserved
+            </span>
+          </h4>
+        </article>
+      </footer>
     </section>
-
-    <footer class="footer">
-      <div class="divider"></div>
-      <article class="footer-center clearfix">
-        <div class="footer-icon">
-          <a
-            href="facebook.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-facebook"></i>
-          </a>
-          <a
-            href="twitter.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a
-            href="whatsapp.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-tiktok"></i>
-          </a>
-          <a
-            href="whatsapp.com"
-            class="mother-icon"
-          >
-            <i class="fab fa-twitter"></i>
-          </a>
-        </div>
-
-        <h4 class="footer-sta">
-          &copy;<span>2025</span>
-          <span class="foot-special">
-            <span class="footer-colo">reliable</span>
-            all right reserved
-          </span>
-        </h4>
-      </article>
-    </footer>
 
     <script src="app.js"></script>
   </body>
