--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <div class="divider"></div>
     <section class="connect">
       <video
-      contorls
+      controls
       autoplay
       muted
       loop
@@ -301,6 +301,7 @@
       >contact us
     </a>
   </section>
+</section>
   <footer class="footer">
     <div class="divider"></div>
     <article class="footer-center clearfix">
@@ -324,7 +325,7 @@
     <i class="fab fa-tiktok"></i>
   </a>
   <a
-  href="whatsapp.com"
+  href="x.com"
   class="mother-icon"
   >
   <i class="fab fa-twitter"></i>
@@ -340,7 +341,6 @@
 </h4>
 </article>
     </footer>
-  </section>
     
     <script src="app.js"></script>
   </body>
