--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
             >
           </div>
         </div>
+        <div class="extra-back"></div>
+        
       </div>
     </section>
     
