--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             >
           </div>
         </div>
-        <div class="extra-back"></div>
+        <!-- <div class="extra-back"></div> -->
         
       </div>
     </section>
